[gd_scene load_steps=15 format=2]

[ext_resource path="res://sprites/enemy5_fly.png" type="Texture" id=1]
[ext_resource path="res://scripts/enemy5.gd" type="Script" id=2]
[ext_resource path="res://scenes/other/engine_par.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/other/appear_par.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/other/metal_death_particles.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9.04204, 7.76371 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": false,
"name": "start",
"speed": 10.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
} ]

[sub_resource type="Animation" id=9]
resource_name = "get_hit"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0504677, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="enemy5" type="KinematicBody2D" groups=[
"enemy",
]]
collision_layer = 2
collision_mask = 7
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 500000, 0 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
animation = "fall"

[node name="Particles2D3" parent="." instance=ExtResource( 3 )]
position = Vector2( 10.5912, -7.60951 )
emitting = false
amount = 50

[node name="Particles2D4" parent="." instance=ExtResource( 3 )]
position = Vector2( -10.5981, -7.27842 )
emitting = false
amount = 50

[node name="appear_par" parent="." instance=ExtResource( 4 )]

[node name="anim" type="AnimationPlayer" parent="."]
anims/get_hit = SubResource( 9 )

[node name="Particles2D" parent="." instance=ExtResource( 5 )]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
